feat: use contrart

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID = 5b47312331baf1b7f1fc093e03e7ce89
+NEXT_PUBLIC_ROOT_CONTRACT_ADDRESS = 0xe07cfa2f7316a83a3cc4a22ecab10fb0e2d58d5c
+NEXT_PUBLIC_SUBNET_CONTRACT_ADDRESS = 0x8624B717379CB81954f0A1E8Cbf22EA2966F0C64
+NEXT_PUBLIC_TAO_TOKEN_ADDRESS = 0x5b3e5dddbe82ad68262b6a16c0ad2f412f5a75d0
+NEXT_PUBLIC_API_URL=http://192.168.31.39:18888
