--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.28.9",
     "bignumber.js": "^9.1.2",
     "connectkit": "^1.7.3",
+    "dayjs": "^1.11.11",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.2",
     "next": "^14.1.4",
