--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-no-ssr": "^1.1.0",
     "viem": "^2.0.6",
     "wagmi": "^2.2.1"
